--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,15 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    ext.kotlin_version = '1.3.72'
+    ext{
+        kotlin_version = '1.3.72'
+        koin_android_version = '2.0.1'
+    }
     repositories {
         google()
         jcenter()
-        
+        mavenCentral()
+
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.0.1'
@@ -20,7 +24,8 @@ allprojects {
     repositories {
         google()
         jcenter()
-        
+        mavenCentral()
+
     }
 }
 
